use. It is likely to change in incompatible ways without warning. Do
not use it unless you're willing to lose your backup.

Version 1.19, released UNRELEASED
---------------------------------

Bug fixes:

* Backup no longer ignores a closed SSH connection. This means it
  won't keep trying to use it, forever. Instead, it crashes and
  terminates the backup.

Improvements to the manual:

* The manual now has an appendix listing all Obnam errors, with codes
  and explanations. This will need to be updated manually from time to
  time.

* The manual now has sections on turning on full debug logging and
  reporting problems.

Improvements to functionality:

* The output of `obnam generations` now show time zone. Lars Wirzenius
  implemented based on suggestion by Limdi.

Version 1.18.2, released 2015-11-15
---------------------------------

Bug fixes:

* The `--exclude-caches` option now works correctly again. Prevoiusly
  it would exclude a cache directory, but would scan through and back
  up the contents of the cache directory. As a result, the backup
  generation would be much bigger, but have hidden files, not visible
  in the output of `obnam ls`. To fix that, remove any generations
  made with Obnam 1.18 or 1.18.1.

  This will affect other exclusions as well.

Version 1.18.1, released 2015-11-06
---------------------------------

Bug fixes:

* The `--quiet` option now disables the statistics reports at the end
  of a backup run.

Version 1.18, released 2015-11-04
---------------------------------

Bug fixes:

* William Boughton fixed parsing for sftp URLs with IPv6 addresses.
  Previously, `sftp://[::1]` would be interpreted by Obnam as an
  address `[` followed by the port `:1]`, but now it is correctly
  interpreted as the adddress `::1` and no explicit port.

* Ian Campbell fixed a bug in the kdirstat plugin, improving the
  handling of unknown file types.

* Lars Wirzenius changed the `scan_tree` code to not be recursive, to